--- a/material/overrides/firesidechat-signup.html
+++ b/material/overrides/firesidechat-signup.html
@@ -20,7 +20,7 @@
 
 
 
-  <section class="fireside-chat-signup">
+  <section>
 
     <div class="container-xl">
       <div class="section-header">
@@ -30,7 +30,8 @@
         <div class="row">
           <div class="col col-12 col-sm-12 col-md-8 offset-md-2 col-lg-8 offset-lg-2 text-center">
 
-            <p>If you missed our recent fireside chat, don't worry! Sign up to the Data Recce mailing list below and <strong>we'll email you a link to watch the event</strong> hosted by <a href="https://www.linkedin.com/in/clkao/">CL&nbsp;Kao</a>, founder of <a href="https://datarecce.io/">DataRecce.io</a>, and <a href="https://www.linkedin.com/in/noelgomez/">Noel&nbsp;Gomez</a>, co-founder of <a href="https://datacoves.com/">Datacoves.com</a> on August 27, 2024.</p>
+            <p>The following video is a recording of the fireside chat hosted by <a href="https://www.linkedin.com/in/clkao/">CL&nbsp;Kao</a>, founder of <a href="https://datarecce.io/">DataRecce.io</a>, and <a href="https://www.linkedin.com/in/noelgomez/">Noel&nbsp;Gomez</a>, co-founder of <a href="https://datacoves.com/">Datacoves.com</a> on August 27, 2024.</p>
+            <p><i>Thanks to all those who signed up and joined the event.</i></p>
 
           </div>
         </div>
@@ -43,28 +44,9 @@
         <div class="row">
           <div class="col col-12 col-sm-12">
 
-            <img src="/assets/images/events/DataRecce-DataCoves_Fireside-chat_20240827_small.jpg" style="width: 100%; max-width: 650px; margin: 2rem auto; display: block; border-radius: 1rem; overflow: hidden;" />
-
-
-            <div id="mc_embed_shell">
-              <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
-                <div id="mc_embed_signup">
-                  <form action="https://infuseai.us1.list-manage.com/subscribe/post?u=2b18366427f11835f05f68aeb&amp;id=968f64e3eb&amp;f_id=00f581e5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-                    <div id="mc_embed_signup_scroll">
-                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                        <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div><div class="mc-field-group"><label for="mce-FNAME">First Name </label><input type="text" name="FNAME" class=" text" id="mce-FNAME" value=""></div><div class="mc-field-group"><label for="mce-MMERGE3">Job Role <span class="asterisk">*</span></label><input type="text" name="MMERGE3" class="required text" id="mce-MMERGE3" value="" required=""></div>
-                        <div hidden=""><input type="hidden" name="tags" value="6327382"></div>
-                    <div id="mce-responses" class="clear">
-                        <div class="response" id="mce-error-response" style="display: none;"></div>
-                        <div class="response" id="mce-success-response" style="display: none;"></div>
-                    </div><div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2b18366427f11835f05f68aeb_968f64e3eb" tabindex="-1" value=""></div><div class="clear text-center"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Sign Up and Watch"></div>
-                  </div>
-                </form>
-              </div>
-              <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[3]='MMERGE3';ftypes[3]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+            <div class="responsive-video">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/Lc90KuqEl4E?si=gEEgchCn7n7jZmqf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-
-
 
           </div>
         </div>
@@ -106,34 +88,6 @@
     </div>
   </section>
 
-
-
-
-  <section class="cal-book">
-
-    <div class="section-header">
-      <h2>Book <span>a</span> demo</h2>
-      <p>Find out more about how Recce can improve your data PR review process</p>
-    </div>
-
-    <!-- Cal inline embed code begins -->
-    <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline"></div>
-    <script type="text/javascript">
-      (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
-    Cal("init", "chat", {origin:"https://cal.com"});
-
-      Cal.ns.chat("inline", {
-      elementOrSelector:"#my-cal-inline",
-      calLink: "team/recce/chat",
-      layout: "month_view"
-      });
-
-      Cal.ns.chat("ui", {"theme":"dark","styles":{"branding":{"brandColor":"#ff6e42"}},"hideEventTypeDetails":false,"layout":"month_view"});
-      </script>
-      <!-- Cal inline embed code ends -->
-
-
-  </section>
 
 
 
